[gd_scene load_steps=9 format=2]

[ext_resource path="res://scenes/developer_tool/DeveloperTool.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/Stranger back in the Night.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://scenes/developer_tool/FireballImpButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/developer_tool/FlameSwipeButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/developer_tool/StrangerBackInTheNight.tres" type="DynamicFont" id=5]
[ext_resource path="res://scenes/developer_tool/EliteImpButton.tscn" type="PackedScene" id=6]

[sub_resource type="DynamicFont" id=1]
size = 64
use_filter = true
extra_spacing_top = 5
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 64
font_data = ExtResource( 2 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1032.0
margin_bottom = 600.0
color = Color( 0.247059, 0.0588235, 0.372549, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = 448.0
margin_top = 32.0
margin_right = 640.0
margin_bottom = 104.0
custom_fonts/normal_font = SubResource( 1 )
text = "Debug Tool"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NPCButtons" type="Control" parent="."]
margin_left = 56.0
margin_top = 328.0
margin_right = 424.0
margin_bottom = 480.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FireballImpButton" parent="NPCButtons" instance=ExtResource( 3 )]
margin_right = -288.0
margin_bottom = -8.0

[node name="FlameSwipeImpButton" parent="NPCButtons" instance=ExtResource( 4 )]
margin_left = 104.0
margin_right = -184.0
margin_bottom = -8.0

[node name="EliteImpButton" parent="NPCButtons" instance=ExtResource( 6 )]
margin_left = 208.0
margin_right = -80.0
margin_bottom = -8.0

[node name="PlayButton" type="Button" parent="."]
margin_left = 808.0
margin_top = 488.0
margin_right = 1000.0
margin_bottom = 560.0
custom_fonts/font = SubResource( 3 )
text = "PLAY"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel2" type="RichTextLabel" parent="."]
margin_left = 48.0
margin_top = 112.0
margin_right = 416.0
margin_bottom = 216.0
rect_scale = Vector2( 1.01646, 1.0104 )
custom_fonts/normal_font = ExtResource( 5 )
text = "Click on one of the enemy types below to add enemies to the dev room.

Hit play to enter dev room"
__meta__ = {
"_edit_use_anchors_": false
}
